# dlms_parser

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  HOWTO.md  README.md  REFERENCE.md  build-linux.sh  build-win.ps1  idf_component.yml  library.json
.github/workflows/: publish.yml
src/dlms_parser/: apdu_handler.cpp  apdu_handler.h  axdr_parser.cpp  axdr_parser.h  dlms_parser.cpp  dlms_parser.h  gcm_decryptor.cpp  gcm_decryptor.h  hdlc_decoder.cpp  hdlc_decoder.h  log.h  mbus_decoder.cpp  mbus_decoder.h  parser.cpp  parser.h  pattern.h  types.h  utils.cpp  utils.h
src/dlms_parser/decryption/: aes_128_gcm_decryptor.h  aes_128_gcm_decryptor_bearssl.h  aes_128_gcm_decryptor_mbedtls.h
tests/: CMakeLists.txt  test_meter_dumps.cpp  test_utils.cpp
tests/dumps/: hdlc_landis_gyr_e450.gak  hdlc_landis_gyr_e450.key  mbus_netz_noe_p1.key  sagemcom_xt211.h
tests/expected/: hdlc_kaifa_ma304h3e.h  hdlc_landis_gyr_e450.h  hdlc_landis_gyr_zmf100.h  hdlc_lgz_e450_2.h  mbus_netz_noe_p1.h
tools/: decode_log.py  decode_readout.cpp  parse_frame.cpp
